# zipng

./: .gitignore  Cargo.toml  README.md  deno.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: action.yaml  deno.yaml
assets/fonts/: classic9pt.json  classic9pt.txt  classics.txt  micro.json  micro3pt.json  micro3pt.txt  mini.json  mini5pt.json  mini5pt.txt  monte.json  sans7pt.json  sans7pt.txt  ski.json  sugimori.json  swiss.json
crates/serproto/: Cargo.toml  LICENSE.txt
crates/serproto/examples/perf_test/: main.rs  monster.rs
crates/serproto/src/: as_postcard.rs  de.rs  error.rs  lib.rs  ser.rs  tests.rs  unterminated.rs  wire.rs
crates/zipng/: Cargo.toml
crates/zipng/examples/: example1.rs
crates/zipng/src/: generic.rs  lib.rs  png.rs
data/royalroad/fics/: 22518.json
data/spines/: RYL0011313.json  RYL0016984.json  RYL0017173.json  RYL0017644.json  RYL0018489.json  RYL0021220.json  RYL0022518-1549440833.json  RYL0022518.json  RYL0022848.json  RYL0024779.json  RYL0025137.json  RYL0025225.json  RYL0030108.json  RYL0032291.json  RYL0035858.json  RYL0036950.json  RYL0041251.json  RYL0045534.json  RYL0047997.json  RYL0048012.json  RYL0048274.json  RYL0048948.json  RYL0049033-1638384662.json  RYL0049033.json  RYL0051404.json  RYL0051925.json  RYL0058362.json  RYL0059240.json  index.json
deno/: deno.json  dev.ts  fresh.gen.ts  import_map.json  lock.json  main.ts  twind.config.ts
deno/components/: Page.tsx  Scanner.tsx
deno/islands/: ChapterPlayer.tsx  Counter.tsx  Scanner.tsx
deno/plugins/: fonts.ts
deno/routes/: RYL[fic_id][chapter_id].tsx  RYL[id].tsx  _404.ts  _500.ts  _middleware.ts  index.tsx  scan.tsx
deno/routes/RYL[fic_id]/: [chapter_id].tsx  cover.ts  feed.ts  feed.tsx  index.tsx
deno/routes/RYL[fic_id]/[chapter_id]/: audio.ts  index.tsx
deno/routes/gtin/: resolver.ts
deno/utils/: data.ts  twind.ts
deno/xml/: rss.ts  xml.ts
edge/: index.ts
examples/: alpine.rs  default_png.rs  default_zip.rs  default_zipng.rs  example1.rs  greyscale8bit.rs  hybrid.rs  indexed8bit.rs  poc.rs  revolution.rs  rgb.rs  sizes.rs  sprites.rs  text.rs  zip.rs  zipng.rs
src/: alignment.rs  backend.rs  backends.rs  blob.rs  blob_ref.rs  blobs.rs  brotli.rs  chapters.json  checksums.rs  context.rs  copyvec.rs  deflate.rs  dev.rs  digits.rs  engine.rs  execute.rs  ffmpeg.rs  fic.rs  font.rs  fonts.rs  foo.md  fucs.rs  generic.rs  inline.rs  io.rs  lib.rs  load.rs  main.rs  micro.rs  opstructs.rs  padding.rs  phantom_type.rs  png.rs  poly.rs  queries.rs  query.rs  s.rs  sept.rs  serde.rs  ss.htm  (+9 more)
src/backend/: error.rs  ext.rs  impl_.rs
src/backends/: no.rs  sqlite.rs
src/blob/: blip.rs  blob.rs  blob_id.rs  blobbable.rs  serialization.rs  test.rs
src/blobs/: blip.rs  blob.rs  blobbable.rs  serialization.rs
src/engine/: context.rs
src/generic/: borrowable.rs  owned_or_borrowed.rs  phantom_type.rs
src/io/: alignment.rs
src/png/: data.rs  dithering.rs  palettes.rs  sizes.rs  to_png.rs  write.rs  write_png.rs  writer.rs  writing.rs
src/png/palettes/: cmocean.rs  colormaps.rs  crameri.rs  mappings.rs  oceanic.rs  oceanographic.rs  singles.rs  viridis.rs
src/queries/: blob.rs  blob_from_id.rs  concatenate_bytes.rs  http.rs  http_get.rs  key_value.rs  noop.rs  reserved.rs  royalroad_spine.rs  text_to_speech.rs  text_to_speech_voices.rs  traits.rs  voice_samples.rs
src/queries/text_to_speech/: vocabulary.rs
src/queries/voice_samples/: vocabulary.rs
src/query/: blob.rs  common.rs  key_value.rs  text_to_speech.rs
src/storage/: baked.rs  layered.rs  no.rs  sqlite.rs  web.rs
src/text/: fonts.rs  micro.json  mini.json  monte.json  sixth.json  sky.json  sugimori.json  swiss.json
src/tts/: windows.rs
src/zip/: configuration.rs  data.rs  sizes.rs  to_zip.rs  write_zip.rs  writing.rs
src/zipng/: data.rs  to_zipng.rs  write_zipng.rs  writing.rs
test_data/: .gitignore  422222.md  greyscale8bit.htm  greyscale8bit.xml  indexed8bit.htm  indexed8bit.xml  poc.htm  poc.txt  poc.xml  rgb.htm  rgb.xml  sketch.txt  zip.htm  zip.xml
