[package]
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "Polyglot encoder for ZIP-and/or-PNG files."
edition = "2021"
license = "MIT OR Apache-2.0"
name = "zipng"
repository = "https://github.com/jeremyBanks/zipng"
version = "0.20221122.0-dev.2"

[features]
default = []
DEV = []
EDITOR = []

[dependencies]
bitvec = "1.0.1"
brotli = { version = "3.3.4" }
bstr = { version = "1.0.1" }
crc = "3.0.0"
derive_more = "0.99.17"
flate2 = { version = "1.0.24" }
heapless = "0.7.16"
once_cell = "1.16.0"
qrcodegen = "1.8.0"
simd-adler32 = "0.3.4"
static_assertions = "1.1.0"
tap = "1.0.1"
tracing = "0.1.37"

[dev-dependencies]
zipng = { path = ".", features = ["DEV"] }
