[package]
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "Polyglot encoder for ZIP-and/or-PNG files."
edition = "2021"
license = "MIT OR Apache-2.0"
name = "zipng"
repository = "https://github.com/jeremyBanks/zipng"
version = "0.20221122.0-dev.4"

[dependencies]
# Required Dependencies
bitvec = "1.0.1"
bstr = "1.0.1"
bytemuck = { version = "1.12.3", features = ["extern_crate_alloc", "min_const_generics"] }
crc = "3.0.0"
once_cell = "1.16.0"
paste = "1.0.9"
serde = "1.0.147"
serde_bytes = "0.11.7"
simd-adler32 = "0.3.4"
static_assertions = "1.1.0"
tracing = "0.1.37"

# Optional, Dev, and Build Dependencies
derive_more = { version = "0.99.17", optional = true, default-features = false }
brotli = { version = "3.3.4", optional = true, default-features = false }
color-eyre = { version = "0.6.2", optional = true, default-features = false }
flate2 = { version = "1.0.24", optional = true, default-features = false }
tracing-error = { version = "0.2.0", optional = true, default-features = false}
tracing-subscriber = { version = "0.3.16", optional = true, default-features = false}
zip = { version = "0.6.3", optional = true, default-features = false }
twox-hash = "1.6.3"
walkdir = "2.3.2"

[features]
default = ["flate2/default"]

dev-dependencies = ["color-eyre", "derive_more/default", "flate2/default", "serde/derive", "tracing-error/default", "tracing-subscriber/default", "tracing-subscriber/env-filter", "zip/default"]

EDITOR = []

[dev-dependencies]
zipng = { path = ".", default-features = false, features = ["dev-dependencies"] }
