[package]
name = "serproto"
version = "0.0.0-dev"
edition = "2021"
license = "MIT"

[dependencies]
miette = "5.4.1"
serde = "1"
thiserror = "1.0.37"

[dev-dependencies]
bincode = "1"
fcode = "1.0.0"
miette = { version = "5.4.1", features = ["fancy"] }
postcard = { version = "1.0.2", features = ["alloc"] }
prost = "0.11"
prost-build = "0.11"
serde = { version="1", features=["derive"] }
serde_bytes = "0.11"
serde_json = "1"

[features]
phony = []
