[package]
name = "serproto"
version = "0.0.0-dev"
edition = "2021"
license = "MIT"

[dependencies]
miette.workspace = true
serde.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true
derive_more.workspace = true

[dev-dependencies]
miette = { workspace = true, features = ["fancy"] }
serde = { workspace = true, features=["derive"] }
serde_json.workspace = true

[features]
phony = []
