[package]
name = "zipng"
version = "0.20221111.0"
edition = "2021"

[features]
EDITOR = []
default = ["brotli", "deflate"]
unstable = []
brotli = ["dep:brotli"]
deflate = ["dep:flate2"]

[dependencies]
brotli = { version = "3.3.4", optional = true }
bstr = { version = "1.0.1" }
crc = "3.0.0"
derive_more = "0.99.17"
flate2 = { version = "1.0.24", optional = true }
indexmap = { version = "1.9.2", features = ["std"] }
simd-adler32 = "0.3.4"
static_assertions = "1.1.0"
tap = "1.0.1"
tracing = "0.1.37"

[dev-dependencies]
zipng = { path = ".", features = ["unstable"] }
